--- a/src/assets/profit.css
+++ b/src/assets/profit.css
@@ -18,7 +18,7 @@ body {
 
 /* Calculator card */
 .calculator {
-  background-image: url(../../public/about\ background.jpg);
+  background-image: url(../../public/about_background.jpg);
   margin-top: 40px;
   padding: 30px;
   border-radius: 12px;
